# vecl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  main.cpp
benchmark/vecl/: fixed_vector.cpp  hash_bench.cpp  string_bench.cpp  vector_bench.cpp
docs/: broadcast.md  constexpr_vector.md  enumerate.md  fixed_vector.md  memory.md  pipes.md  publisher.md  set_vector.md  small_vector.md  sparse_map.md  sparse_set.md  view.md
include/vecl/: broadcast.hpp  concepts.hpp  conditional_storage.hpp  constexpr_vector.hpp  dispatcher.hpp  enumerate.hpp  fixed_vector.hpp  java_string.hpp  lru_cache.hpp  many.hpp  memory.hpp  pipes.hpp  poly.hpp  publisher.hpp  robin_set.hpp  set_vector.hpp  simple_buffer.hpp  simple_set.hpp  small_vector.hpp  sparse_map.hpp  sparse_set.hpp  type_traits.hpp  uninitialized_array.hpp  uninitialized_buffer.hpp  view.hpp
include/vecl/config/: config.h  version.h
include/vecl/internal/: memory_debug.hpp  unordered_map.hpp  vector.hpp
include/vecl/memory/: memory_aligned_alloc.hpp  memory_debug.hpp  memory_debug_callback.hpp  memory_debug_mt.hpp  memory_internal.hpp  memory_malloc.hpp
include/vecl/pipe/: pipe_base.hpp
include/vecl/pipes/: pipe_base.hpp
include/vecl/view/: simple_view.hpp  skip_view.hpp
test/: CMakeLists.txt
test/vecl/: broadcast.cpp  constexpr_vector.cpp  dispatcher.cpp  enumerate.cpp  fixed_vector.cpp  hello_world.cpp  java_string.cpp  lru_cache.cpp  memory_debug.cpp  pipe.cpp  pipes.cpp  poly.cpp  publisher.cpp  set_vector.cpp  simple_set.cpp  small_vector.cpp  sparse_map.cpp  sparse_set.cpp  views.cpp
test/vecl/internal/: main.cpp  memory_debug.cpp
test/vecl/ranges/: views.cpp
